Update lists and organize directories

--- a/recipes/pan-seared-salmon.html
+++ b/recipes/pan-seared-salmon.html
@@ -10,7 +10,7 @@
     <h1>
         Pan Seared Salmon
     </h1>
-    <img src="./images/wholesomeyum-Pan-Seared-Salmon-Recipe-13.jpg">
+    <img src="../images/wholesomeyum-Pan-Seared-Salmon-Recipe-13.jpg" style="width:600px;height:600px;">
     <h2>
         Description
     </h2>
@@ -27,19 +27,19 @@
             Salmon:
         </h3>
             <ul>
-                Salmon Fillets
-                Sea Salt & Black Pepper
-                Olive Oil
+                <li>Salmon Fillets</li>
+                <li>Sea Salt & Black Pepper</li>
+                <li>Olive Oil</li>
             </ul>
         <h3>
             Herb Lemon Butter Sauce:
         </h3>
             <ul>
-                Salted Butter
-                Lemon Juice
-                Garlic
-                Parsley
-                Dill
+                <li>Salted Butter</li>
+                <li>Lemon Juice</li>
+                <li>Garlic</li>
+                <li>Parsley</li>
+                <li>Dill</li>
             </ul>
     <h2>
         Steps
@@ -48,19 +48,19 @@
             Seasoning/Prep:
         </h3>
             <ol>
-                Mix up herb butter
-                Dry salmon
-                Heat oil
-                Season fish simply
+                <li>Mix up herb butter</li>
+                <li>Dry salmon</li>
+                <li>Heat oil</li>
+                <li>Season fish simply</li>
             </ol>
         <h3>
             Cooking:
         </h3>
             <ol>
-                Begin searing salmon for 5-6 minutes on one side
-                Flip, then add herb butter
-                Cook for one minute, basting salmon with butter
-                Serve
+                <li>Begin searing salmon for 5-6 minutes on one side</li>
+                <li>Flip, then add herb butter</li>
+                <li>Cook for one minute, basting salmon with butter</li>
+                <li>Serve</li>
             </ol>
 </body>
 </html>
