--- a/recipes/pan-seared-salmon.html
+++ b/recipes/pan-seared-salmon.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>
+    <h1 class="title">
         Pan Seared Salmon
     </h1>
-    <img src="../images/wholesomeyum-Pan-Seared-Salmon-Recipe-13.jpg" style="width:600px;height:600px;">
+    <img id="firstimage" src="../images/wholesomeyum-Pan-Seared-Salmon-Recipe-13.jpg">
     <h2>
         Description
     </h2>
         <p>
-            Grilled salmon is great if you want to cook your salmon outside, but frying salmon is the best way to get a crispy crust on it. And if you're tired of messing up salmon, this pan seared salmon recipe is just for you! I'll show you how to pan sear salmon perfectly, so it's buttery and moist on the inside, has a crust on the outside, and is done in just minutes. Don't miss all 10 of my top tips for the best pan fried salmon below!
+            Grilled salmon is <b>great</b> if you want to cook your salmon outside, but frying salmon is the best way to get a crispy crust on it. And if you're tired of messing up salmon, this pan seared salmon recipe is just for you! I'll show you how to pan sear salmon perfectly, so it's buttery and moist on the inside, has a crust on the outside, and is done in just minutes. Don't miss all 10 of my top tips for the best pan fried salmon below!
         </p>
         <p>
             This searing method is my best way to cook salmon lately, but there are many other delicious ways to enjoy it! Try my easy salmon lox (yes, you can make this!), baked pesto salmon, or even stuffed salmon for a fancier meal.
